<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:text="RFID档案管理系统"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/title_blue"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        >
        <TextView
            android:id="@+id/tv_jieyue"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:background="@drawable/tuoyuan"
            android:text="@string/jieyue"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginLeft="40dp"
            />
        <View
            android:layout_width="50dp"
            android:layout_height="match_parent"></View>
        <TextView
            android:id="@+id/tv_guihuan"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:background="@drawable/tuoyuan"
            android:text="@string/guihuan"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="70dp">
        <TextView
            android:id="@+id/tv_ruku"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:background="@drawable/tuoyuan"
            android:text="@string/ruku"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="50dp"
            android:layout_height="match_parent"></View>
        <TextView
            android:id="@+id/tv_pandian"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:background="@drawable/tuoyuan"
            android:text="@string/pandian"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="70dp">
        <TextView
            android:id="@+id/tv_zhuisu"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:background="@drawable/tuoyuan"
            android:text="@string/zhuisu"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="50dp"
            android:layout_height="match_parent"></View>
        <TextView
            android:id="@+id/tv_tuichu"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:background="@drawable/tuoyuan"
            android:text="@string/tuichu"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginRight="40dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/dibu"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="张三"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_weight="1.6"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="张三"/>
        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:text="已连接"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:textSize="13sp"
            android:textColor="@color/black"
           />
    </LinearLayout>
</LinearLayout>
