<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <include layout="@layout/layout_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"

            android:text="@string/danghao"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            />

        <TextView
            android:id="@+id/tv_danghao"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:background="@drawable/textviewbag"

            android:textColor="@color/title_blue"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"

            android:text="@string/zhuangtai"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginLeft="40dp"
            />

        <TextView
            android:id="@+id/tv_zhuangtai"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:background="@drawable/textviewbag"

            android:textSize="20sp"
            android:textColor="@color/title_blue"
            android:gravity="center"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="题名："
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_ztm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="40dp"
            android:layout_weight="0.6"
            android:background="@drawable/textviewbag"
            android:gravity="center"

            android:textColor="@color/title_blue"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"

            android:text="@string/jieyuere"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_jieyueren"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:background="@drawable/textviewbag"

            android:textSize="20sp"
            android:textColor="@color/title_blue"

            android:gravity="center"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"

            android:text="@string/caozuoren"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginLeft="40dp"
            />

        <TextView
            android:id="@+id/tv_caozuoren"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:background="@drawable/textviewbag"
            android:textColor="@color/title_blue"

            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"

            android:text="@string/time"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_shijian"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:background="@drawable/textviewbag"
            android:text="2016-09-01"
            android:textSize="20sp"
            android:textColor="@color/title_blue"
            android:gravity="center"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp">
            <Button
                android:id="@+id/bt_guanbi"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/textviewbag"
                android:text="关闭"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/dibu"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="张三"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_weight="1.6"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="时间"/>

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="已连接"/>
    </LinearLayout>
</LinearLayout>
