<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"

    tools:context=".activity.PanDianActivity">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/yongtu"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ankupandian"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/quankupandian"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="按箱盘点"
                android:textColor="@color/black" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pandianStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="2dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/kuhao"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/tv_kuhao"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tv1"
            android:background="@drawable/textviewbag"
            android:gravity="center"
            android:hint="请选择盘点方式"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>




    <ListView
        android:layout_marginTop="5dp"
        android:id="@+id/lv_pandian"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/st_saoma"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="扫码:"
                android:textColorHint="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="当前总数:"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_count"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="2001"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="份"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="2dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="2dp"
        android:paddingRight="10dp"
        android:weightSum="3">


        <Button
            android:id="@+id/bt_weiruku"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textviewbag"
            android:text="未入库"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt_queding"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textviewbag"
            android:text="提交"
             />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/dibu"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="张三"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:gravity="center"
            android:text="时间"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="right|center_vertical"
            android:text="已连接"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>

