<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_title"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"

                android:gravity="center"
                android:text="部门："
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_kuhao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:layout_weight="0.6"
                android:background="@drawable/textviewbag"
                android:gravity="center"

                android:textColor="@color/title_blue"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"

                android:gravity="center"
                android:text="@string/danghao"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_danghao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:layout_weight="0.6"
                android:background="@drawable/textviewbag"
                android:gravity="center"

                android:textColor="@color/title_blue"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"

                android:gravity="center"
                android:text="题名："
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_ztm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:layout_weight="0.6"
                android:background="@drawable/textviewbag"
                android:gravity="center"

                android:textColor="@color/title_blue"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"

                android:gravity="center"
                android:text="@string/zhuangtai"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_zhuangtai"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:layout_weight="0.6"
                android:background="@drawable/textviewbag"
                android:gravity="center"
                android:textColor="@color/title_blue"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_jyr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"

                android:gravity="center"
                android:text="@string/jieyuere"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_jieyueren"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:layout_weight="0.6"
                android:background="@drawable/textviewbag"
                android:gravity="center"

                android:textColor="@color/title_blue"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"

                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_shijian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:background="@drawable/textviewbag"
                android:gravity="center"
                android:textColor="@color/title_blue"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/dibu"
        android:paddingBottom="0dp"
       android:layout_alignParentBottom="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="张三"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:gravity="center"
            android:text="张三"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="已连接"
            android:gravity="right|center_vertical"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>
</RelativeLayout>
